# SmartChat-Artifact

./: .gitmodules  Dockerfile  README.md  build.sh
benchmarks/B2/blackjack/: blackjack.sol
benchmarks/B2/etherstore/: etherstore.sol
benchmarks/assets/: B1-bug.csv  B2-bug.csv  B2.list
benchs/assets/: B2-ins.csv
docker-setup/confuzzius/: install_confuzzius.sh
docker-setup/tool-scripts/: run_confuzius.sh  run_replayer.sh
rq1/: get_coverage.sh  get_metrics.sh  graphs.sh
rq1/output_rq1_rq2/: B1_Llama3-70B.coverage  B1_Llama3-70B.metrics  B1_Llama3-8B.coverage  B1_Llama3-8B.metrics  B1_Llama3.3-70B.coverage  B1_Llama3.3-70B.metrics  B1_gemini-1.5-flash.coverage  B1_gemini-1.5-flash.metrics  B1_gpt4.1mini.coverage  B1_gpt4.1mini.metrics  B1_gpt4omini.coverage  B1_gpt4omini.metrics  B1_mixtral-8x7b_8192.coverage  B1_mixtral-8x7b_8192.metrics  get_coverage.sh  get_metrics.sh  graphs.sh  graphs.sh~
rq2/: base_dfa.csv  base_rand.csv  create_data.sh  create_data_buggain.sh  data.tar.xz  output_B1_dfa.tar.xz  process_llm_buggain.sh  process_llm_only.sh
rq3/: create_data.sh  data.tar.xz  output_b2_dfa_5time.tar.xz  output_b2_smartchat_llm_code_5times.tar.xz  output_b2_smartchat_llm_cot_5times.tar.xz  output_b2_smartian_5time.tar.xz
scripts/: common.py  datacollect.py  plot_b1_bar.py  plot_b1_bug.py  plot_b1_cve.py  plot_b2_bug.py  plot_b2_cov.py  plot_b2_graph.py  plot_b2_graph2.py  pyproject.toml  run_experiment.py  speedup.py  speedup_2.py  statistical_eval.py  test_B1_compare_all.sh  test_B2_compare_all.sh  test_B2_confuzius.sh
(+3533 files in other folders)
