[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Fausto Carvalho <faustocarva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
common = "^0.1.2"
seaborn = "^0.13.2"
numpy = ">=1.21,<2.0"
matplotlib = ">=3.5,<3.8"
pandas = ">=1.3,<2.0"
scipy = "<1.11"
requests = "^2.32.4"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
